Fix: Adjust header spacing on smaller screens.

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -11,7 +11,7 @@
 
   @media (width <= 884px) {
     margin-top: 0;
-    gap: 10.5rem;
+    gap: 14.5rem;
   }
 
   @media (width <= 640px) {
